--- a/ansible/collection_playbooks/block/update_ucp.yml
+++ b/ansible/collection_playbooks/block/update_ucp.yml
@@ -1,5 +1,5 @@
 -
-  name: Adding UcpSystem
+  name: Updating UcpSystem
   hosts: localhost
   collections:
     - hitachi.storage
@@ -7,28 +7,22 @@
   pre_tasks:
     - include_vars: vars.yml
   vars:
-    - serial_number: UCP-CI-12435
+    - serial_number: UCP-CI-12345
     - gateway_address: 172.25.20.35
-    - model: UCP CI
-    - name: ucp-24-35
     - region: AMERICA
-    - country: 'United States'
-    - zipcode: 95054
-    - zone: zone
+    - country: Mexico
+    - zipcode: 4728
   tasks:
-    - hv_ucp:
+    - hv_ucpsystem:
         state: present
+        serialNumber: '{{ serial_number | default(None) }}'
         ucpadvisor_address: "{{ucpadvisor_address}}"
         ucpadvisor_username: "{{ucpadvisor_username}}"
         ucpadvisor_key: "{{ucpadvisor_password}}"
-        serial_number: '{{ serial_number | default(None) }}'
-        gateway_address: '{{ gateway_address | default(None) }}'
-        model: '{{ model | default(None) }}'
-        name: '{{ name | default(None) }}'
+        gatewayAddress: '{{ gateway_address | default(None) }}'
         region: '{{ region | default(None) }}' 
         country: '{{ country | default(None) }}' 
         zipcode: '{{ zipcode | default(None) }}'
-        zone: '{{ zone | default(None) }}'
       register: result
     - debug: var=result
 
