--- a/ansible/collection_playbooks/block/delete_ucp.yml
+++ b/ansible/collection_playbooks/block/delete_ucp.yml
@@ -4,12 +4,17 @@
   collections:
     - hitachi.storage
   gather_facts: false
+  pre_tasks:
+    - include_vars: vars.yml
   vars:
     - serial_number: UCP-CI-12345
   tasks:
     - hv_ucpsystem:
         state: absent
         serialNumber: '{{ serial_number | default(None) }}'
+        ucpadvisor_address: "{{ucpadvisor_address}}"
+        ucpadvisor_username: "{{ucpadvisor_username}}"
+        ucpadvisor_key: "{{ucpadvisor_password}}"
       register: result
     - debug: var=result
 
