--- a/ansible/collection_playbooks/block/add_ucp.yml
+++ b/ansible/collection_playbooks/block/add_ucp.yml
@@ -7,7 +7,7 @@
   pre_tasks:
     - include_vars: vars.yml
   vars:
-    - serial_number: UCP-CI-12435
+    - serial_number: "12435"
     - gateway_address: 172.25.20.35
     - model: UCP CI
     - name: ucp-24-35
