--- a/ansible/collection_playbooks/block/update_ucp.yml
+++ b/ansible/collection_playbooks/block/update_ucp.yml
@@ -7,7 +7,8 @@
   pre_tasks:
     - include_vars: vars.yml
   vars:
-    - serial_number: UCP-CI-12435
+    - serial_number: "12435"
+    - model: UCP CI
     - gateway_address: 172.25.20.35
     - region: APAC
     - country: India
@@ -16,6 +17,7 @@
     - hv_ucp:
         state: present
         serial_number: '{{ serial_number }}'
+        model: '{{ model }}'
         ucpadvisor_address: "{{ucpadvisor_address}}"
         ucpadvisor_username: "{{ucpadvisor_username}}"
         ucpadvisor_key: "{{ucpadvisor_password}}"
