--- a/ansible/collection_playbooks/block/get_all_luns.yml
+++ b/ansible/collection_playbooks/block/get_all_luns.yml
@@ -4,14 +4,29 @@
   collections:
     - hitachi.storage
   gather_facts: false
-  vars_files:
-    - ./my_infra.json
+  pre_tasks:
+    - include_vars: vars.yml
+  vars:
+    - istorage_serial: "446039"
+    - storage_serial: "611032"
+    - ucp_serial: "UCP-CI-12144"
+    - ixxxxmax_count: 10
   tasks:
     - hv_lun_facts:
-        storage_serial: '{{ storage_serial | default(omit) }}'
-        data:
+
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+          
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
+        lun_info:
           lun: '{{ lun | default(omit) }}'
           name: '{{ name | default(omit) }}'
           max_count: '{{ max_count | default(omit) }}'
+
       register: result
     - debug: var=result.luns
