--- a/ansible/collection_playbooks/block/expand_lun.yml
+++ b/ansible/collection_playbooks/block/expand_lun.yml
@@ -4,17 +4,31 @@
   collections:
     - hitachi.storage
   gather_facts: false
+  pre_tasks:
+    - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: 123456
-    - luns: 8017
-    - size_gb: 4
+    - storage_serial: 446039
+    - ucp_serial: UCP-CI-52918
+    - luns: 380
+    - size_gb: 2
   tasks:
     - hv_lun:
         state: present
-        storage_serial: '{{ storage_serial }}'
-        data:
+
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
+        lun_info:
           luns: '{{ luns }}'
           size: '{{size_gb}}'
           cap_saving: '{{ cap_saving | default(None) }}'
+
       register: result
     - debug: var=result.lun
+
