--- a/ansible/collection_playbooks/block/add_storagesystems.yml
+++ b/ansible/collection_playbooks/block/add_storagesystems.yml
@@ -5,17 +5,20 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.yml
+    - include_vars: vars.ucpa.yml
+    - include_vars: vars.storage.yml
   vars:
-    - storage_profile: /opt/hitachi/ansible/storage.json.611032
-    - ucp_serial: UCP-CI-12435
+    - storage_serial: "446039"
+    - ucp_serial: UCP-CI-20105
   tasks:
     - hv_storagesystem:
-        storage_profile: '{{ storage_profile | default(omit) }}'
-        ucp_serial: '{{ ucp_serial }}'
-        ucpadvisor_address: "{{ucpadvisor_address}}"
-        ucpadvisor_username: "{{ucpadvisor_username}}"
-        ucpadvisor_key: "{{ucpadvisor_password}}"
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
         state: present
       register: result
     - debug: var=result
