--- a/ansible/collection_playbooks/block/create_multi_luns.yml
+++ b/ansible/collection_playbooks/block/create_multi_luns.yml
@@ -4,24 +4,36 @@
   collections:
     - hitachi.storage
   gather_facts: false
+  pre_tasks:
+    - include_vars: vars.ucpa.yml
   vars:
+    - ucp_serial: UCP-CI-52918
     - pool_id: 6
     - size: 0.09GB
-    - storage_serial: 123456
+    - storage_serial: 446039
     - luns:
       - 8019
       - 8018
   tasks:
     - hv_lun:
         state: present
-        storage_serial: '{{ storage_serial }}'
-        data:
-          storage_pool:
-            id: '{{ pool_id | default(None) }}'
+
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
+        lun_info:
+          pool_id: '{{ pool_id | default(None) }}'
           luns: '{{ item }}'
           size: '{{ size | default(None) }}'
           name: '{{ name  | default(None) }}'
           cap_saving: '{{ cap_saving | default(None) }}'
+
       with_items: '{{ luns }}'
       register: result
     - debug: var=result
