--- a/ansible/collection_playbooks/block/delete_lun.yml
+++ b/ansible/collection_playbooks/block/delete_lun.yml
@@ -4,19 +4,32 @@
   collections:
     - hitachi.storage
   gather_facts: false
+  pre_tasks:
+    - include_vars: vars.ucpa.yml
   vars:
     - luns:
-      - 800
-      - 801
-      - 802
-    - storage_serial: 12345
+      - 377
+      - 378
+    - storage_serial: 446039
+    - ucp_serial: UCP-CI-52918
   tasks:
     - hv_lun:
         state: absent
-        storage_serial: '{{ storage_serial }}'
-        data:
+
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
+        lun_info:
           luns: '{{ item }}'
           name: '{{ name | default(None) }}'
+
       with_items: '{{ luns }}'
       register: result
     - debug: var=result
+
