--- a/ansible/collection_playbooks/block/get_storagesystem.yml
+++ b/ansible/collection_playbooks/block/get_storagesystem.yml
@@ -5,15 +5,28 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.yml
+    - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: 611032
+    - storage_serial: 446039
+    - ucp_serial: UCP-CI-12345
+    - query:
+      - pools
+      - ports
+      - quorumdisks
+      - journalPools
+      - freeLogicalUnitList
   tasks:
     - hv_storagesystem_facts:
-        storage_serial: '{{ storage_serial }}'
-        ucpadvisor_address: "{{ucpadvisor_address}}"
-        ucpadvisor_username: "{{ucpadvisor_username}}"
-        ucpadvisor_key: "{{ucpadvisor_password}}"
+    
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+          
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
         query: '{{ query | default(None) }}'
       register: result
     - debug: var=result.storageSystem
