--- a/ansible/collection_playbooks/block/get_lun_hex.yml
+++ b/ansible/collection_playbooks/block/get_lun_hex.yml
@@ -5,11 +5,11 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.yml
+    - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: "611032"
-    - ucp_serial: "UCP-CI-12144"
-    - lun: 00:05:6F 
+    - storage_serial: "446039"
+    - ucp_serial: "UCP-CI-52918"
+    - lun: 00:07:CF 
   tasks:
     - hv_lun_facts:
 
