--- a/ansible/collection_playbooks/block/vars.storage.yml
+++ b/ansible/collection_playbooks/block/vars.storage.yml
@@ -1,4 +1,4 @@
 storage_serial: 446039
 storage_address: 172.25.47.20
-storage_user: maintenance
-storage_password: raid-maintenance
+storage_user: user
+storage_password: password
