--- a/ansible/collection_playbooks/block/add_storagesystems.yml
+++ b/ansible/collection_playbooks/block/add_storagesystems.yml
@@ -8,12 +8,14 @@
     - include_vars: vars.ucpa.yml
     - include_vars: vars.storage.yml
   vars:
-    - storage_serial: "446039"
     - ucp_serial: UCP-CI-20105
   tasks:
     - hv_storagesystem:
         storage_system_info:
           serial: '{{ storage_serial }}'
+          address: "{{storage_address}}"
+          username: "{{storage_user}}"
+          password: "{{storage_password}}"
           ucp_serial: '{{ ucp_serial }}'
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
