--- a/ansible/collection_playbooks/block/create_multi_luns.yml
+++ b/ansible/collection_playbooks/block/create_multi_luns.yml
@@ -32,7 +32,7 @@
           luns: '{{ item }}'
           size: '{{ size | default(None) }}'
           name: '{{ name  | default(None) }}'
-          cap_saving: '{{ cap_saving | default(None) }}'
+          capacity_saving: '{{ capacity_saving | default(None) }}'
 
       with_items: '{{ luns }}'
       register: result
