--- a/ansible/collection_playbooks/block/get_all_hg_query_luns.yml
+++ b/ansible/collection_playbooks/block/get_all_hg_query_luns.yml
@@ -4,14 +4,26 @@
   collections:
     - hitachi.storage
   gather_facts: false
+  pre_tasks:
+    - include_vars: vars.ucpa.yml.20.90
   vars:
-    - storage_serial: 123456
+    - ucp_serial: UCP-CI-71366
+    - storage_serial: 446039
     - query:
       - luns
   tasks:
     - hv_hg_facts:
-        storage_serial: '{{ storage_serial }}'
-        data:
+
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+          
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
+        host_group_info:
           query: '{{ query | default(omit) }}'
           lun: '{{ lun | default(omit) }}'
           name: '{{ hgName | default(omit) }}'
