--- a/ansible/collection_playbooks/block/present_lun.yml
+++ b/ansible/collection_playbooks/block/present_lun.yml
@@ -4,20 +4,36 @@
   collections:
     - hitachi.storage
   gather_facts: false
+  pre_tasks:
+    - include_vars: vars.ucpa.yml.20.90
   vars:
+    - storage_serial: 446039
+    - ucp_serial: UCP-CI-71366
     - host_group_name: test-ansible-hg-1
     - luns:
       - 800
       - 801
-    - storage_serial: 12345
   tasks:
     - hv_hg:
         state: present
-        storage_serial: '{{ storage_serial }}'
-        data:
+
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+          
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
+        host_group_info:
+          name: '{{ host_group_name }}'
+          ports: '{{ ports | default(None) }}'
+          
           state: '{{ state | default(None) }}'
           name: '{{ host_group_name }}'
           ports: '{{ ports | default(None) }}'
           luns: '{{ luns | default(None) }}'
+
       register: result
     - debug: var=result
