--- a/ansible/collection_playbooks/block/get_hg.yml
+++ b/ansible/collection_playbooks/block/get_hg.yml
@@ -7,7 +7,7 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml.20.90
   vars:
-    - ucp_serial: UCP-CI-71366
+    - ucp_serial: UCP-CI-26261
     - storage_serial: 446039
     - ihost_group_name: test-ansible-hg-1
     - iports:
@@ -25,7 +25,7 @@
           username: "{{ucpadvisor_username}}"
           password: "{{ucpadvisor_password}}"
 
-        host_group_info:
+        spec:
           query: '{{ query | default(None) }}'
           lun: '{{ lun | default(None) }}'
           name: '{{ host_group_name | default(None) }}'
