--- a/ansible/collection_playbooks/block/unpresent_lun.yml
+++ b/ansible/collection_playbooks/block/unpresent_lun.yml
@@ -4,18 +4,29 @@
   collections:
     - hitachi.storage 
   gather_facts: false
+  pre_tasks:
+    - include_vars: vars.ucpa.yml.20.61
   vars:
+    - storage_serial: 611039
+    - ucp_serial: UCP-CI-12035
     - host_group_name: test-ansible-hg-1
     - luns:
-      - 800
-      - 801
-    - storage_serial: 12345
+      - 94
     - state: absent
   tasks:
     - hv_hg:
         state: present
-        storage_serial: '{{ storage_serial }}'
-        data:
+
+        storage_system_info:
+          serial: '{{ storage_serial }}'
+          ucp_serial: '{{ ucp_serial }}'
+          
+        ucp_advisor_info:
+          address: "{{ucpadvisor_address}}"
+          username: "{{ucpadvisor_username}}"
+          password: "{{ucpadvisor_password}}"
+
+        spec:
           state: '{{ state | default(None) }}'
           name: '{{ host_group_name }}'
           ports: '{{ ports | default(None) }}'
