--- a/ansible/collection_playbooks/block/create_hg.yml
+++ b/ansible/collection_playbooks/block/create_hg.yml
@@ -5,13 +5,14 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.ucpa.yml.20.90
+    - include_vars: vars.ucpa.yml.20.61
   vars:
-    - storage_serial: 446039
-    - ucp_serial: UCP-CI-71366
+    - storage_serial: 611032
+    - ucp_serial: UCP-CI-11111
     - host_group_name: test-ansible-hg-1
+    - iwwns:
+      - 200000109B3C0FD3
     - ports:
-      - CL1-A
       - CL2-B
     - host_mode: VMWARE_EXTENSION
     - host_mode_options:
