--- a/ansible/collection_playbooks/block/get_all_hg_query_luns.yml
+++ b/ansible/collection_playbooks/block/get_all_hg_query_luns.yml
@@ -5,12 +5,13 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.ucpa.yml.20.90
+    - include_vars: vars.ucpa.yml.20.61
   vars:
-    - ucp_serial: UCP-CI-71366
-    - storage_serial: 446039
+    - ucp_serial: UCP-CI-11111
+    - storage_serial: 611032
     - query:
       - luns
+      - wwns
   tasks:
     - hv_hg_facts:
 
