--- a/ansible/collection_playbooks/block/add_storagesystems.yml
+++ b/ansible/collection_playbooks/block/add_storagesystems.yml
@@ -1,5 +1,5 @@
 -
-  name: Adding Storage System from storage.json
+  name: Adding Storage System
   hosts: localhost
   collections:
     - hitachi.storage
