--- a/ansible/collection_playbooks/block/delete_storage_system.yml
+++ b/ansible/collection_playbooks/block/delete_storage_system.yml
@@ -1,5 +1,5 @@
 -
-  name: Deleting Storage System from storage.json
+  name: Deleting Storage System
   hosts: localhost
   collections:
     - hitachi.storage
