--- a/ansible/collection_playbooks/block/get_all_parity_groups.yml
+++ b/ansible/collection_playbooks/block/get_all_parity_groups.yml
@@ -1,5 +1,5 @@
--
-  name: Testing Delete Host Group
+- 
+  name: Get All Parity Group details
   hosts: localhost
   collections:
     - hitachi.storage
@@ -7,27 +7,16 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: 611032
     - ucp_serial: UCP-CI-11111
-    - host_group_name: test-ansible-hg-1
-    - ports:
-      - CL2-B
+    - storage_serial: 611032
   tasks:
-    - hv_hg:
-        state: absent
-
+    - hv_paritygroup_facts:
         storage_system_info:
           serial: '{{ storage_serial }}'
           ucp_serial: '{{ ucp_serial }}'
-          
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
           username: "{{ucpadvisor_username}}"
           password: "{{ucpadvisor_password}}"
-
-        spec:
-          name: '{{ host_group_name }}'
-          ports: '{{ ports | default(None) }}'
-          
       register: result
-    - debug: var=result
+    - debug: var=result.paritygroup
