--- a/ansible/collection_playbooks/block/get_all_ucps.yml
+++ b/ansible/collection_playbooks/block/get_all_ucps.yml
@@ -5,7 +5,7 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.yml
+    - include_vars: vars.ucpa.yml
   vars_files:
   tasks:
     - hv_ucp_facts:
