--- a/ansible/collection_playbooks/block/unpresent_lun.yml
+++ b/ansible/collection_playbooks/block/unpresent_lun.yml
@@ -5,7 +5,7 @@
     - hitachi.storage 
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.ucpa.yml.20.61
+    - include_vars: vars.ucpa.yml
   vars:
     - storage_serial: 611032
     - ucp_serial: UCP-CI-11111
